--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bull": "^4.16.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "redis": "^5.5.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
